@@ -66,4 +66,11 @@ class MulUnit extends Unit
       }
     return str.toString();
   }
+
+  public Unit sqrt ()
+  {
+    if ((power1 & 1) == 0 && (power2 & 1) == 0)
+      return mul (unit1, power1 >> 1, unit2, power2 >> 1);
+    return super.sqrt();
+  }
 }
